--- a/web/index.html
+++ b/web/index.html
@@ -19,7 +19,7 @@
     </head>
     <body>
         <div id="content">
-
+            <div>Consider donating: ETH: 0x000a2a2B5D207e044d6b2d6D27EAD6C81A5b0cfDv BTC: 1DcHZUVfmFUXETAsMekCrSdacvKG4f4Wfb</div>
             <div class="floating-container">
                 <center><h3 id="graphHeading">Total BTC</h3>
                   <span class="smooth"><input type="checkbox" id="smooth"> <label for="smooth">Smooth curve</label></span>
